Добавлена заготовка графического интрефейса